[gd_scene format=3 uid="uid://bgh6hynxcy5jk"]

[ext_resource type="Texture2D" uid="uid://bo8a5yatmljyf" path="res://assets/main_menu/option_menu.png" id="1_sfrxv"]
[ext_resource type="Script" uid="uid://dh6p52r0cj0oo" path="res://src/scenes/settings_menu/settings_menu.gd" id="2_4mek6"]
[ext_resource type="FontFile" uid="uid://bayl34n5s6ic7" path="res://fonts/dungeon-mode.ttf" id="2_tqtwh"]
[ext_resource type="Script" uid="uid://cr0o3usgdxlqw" path="res://src/scenes/settings_menu/soundtrack.gd" id="3_4mek6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qel0l"]
texture = ExtResource("1_sfrxv")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x2yjq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_thkx5"]

[node name="settings_menu" type="Panel" unique_id=100246387]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -88.0
offset_right = 109.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_qel0l")
script = ExtResource("2_4mek6")

[node name="settings_label" type="Label" parent="." unique_id=1927367219]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_tqtwh")
theme_override_font_sizes/font_size = 10
text = "Configura√ßoes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="settings_menu" type="VBoxContainer" parent="." unique_id=1801259844]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -62.5
offset_top = -48.5
offset_right = 74.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2

[node name="fullscreen_cb" type="CheckButton" parent="settings_menu" unique_id=1593495282]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tqtwh")
theme_override_font_sizes/font_size = 8
theme_override_styles/focus = SubResource("StyleBoxEmpty_x2yjq")
text = "Tela Cheia"

[node name="EmptyLabel" type="Label" parent="settings_menu" unique_id=1626061894]
layout_mode = 2

[node name="Soundtrack label" type="Label" parent="settings_menu" unique_id=937749757]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tqtwh")
theme_override_font_sizes/font_size = 8
text = "Volume"

[node name="Soundtrack" type="HSlider" parent="settings_menu" unique_id=2052620939]
layout_mode = 2
max_value = 0.1
step = 0.001
script = ExtResource("3_4mek6")
bus_name = "Master"

[node name="close_btn" type="Button" parent="." unique_id=1922799949]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -34.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_tqtwh")
theme_override_font_sizes/font_size = 10
theme_override_styles/focus = SubResource("StyleBoxEmpty_thkx5")
text = "Fechar"
flat = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="toggled" from="settings_menu/fullscreen_cb" to="." method="_on_fullscreen_cb_toggled"]
[connection signal="pressed" from="close_btn" to="." method="_on_close_btn_pressed"]
